@@ -16,6 +16,8 @@ Core and Builtins
   to str, bytes and bytearray could be optimized away by the compiler, letting
   the interpreter segfault instead of raising an error.
 
+- Issue #4915: Port sysmodule to Windows CE.
+
 - Issue #1180193: When importing a module from a .pyc (or .pyo) file with
   an existing .py counterpart, override the co_filename attributes of all
   code objects if the original filename is obsolete (which can happen if the
@@ -275,6 +277,8 @@ Tools/Demos
 
 Build
 -----
+
+- Issue #4895: Use _strdup on Windows CE.
 
 - Issue #4472: "configure --enable-shared" now works on OSX
 
